infrastructure/platform/container-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: container-registry
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: registry-config
              mountPath: /etc/distribution/config.yml
              subPath: config.yml
            - name: registry-data
              mountPath: /var/lib/registry
      volumes:
        - name: registry-config
          configMap:
            name: registry-config
        - name: registry-data
          persistentVolumeClaim:
            claimName: registry
