infrastructure/platform/container-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: container-registry
spec:
  selector:
    app: registry
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  type: ClusterIP
