infrastructure/platform/container-registry/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry
  namespace: container-registry
spec:
  parentRefs:
    - name: gateway-internal-technitium
      namespace: gateway
  hostnames:
    - "registry.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: registry
          port: 5000
          weight: 1
